# countdown

./: .gitignore  LICENSE  README.md  TODO.md  __init__.py  countdown  countdown.py  counter.py  pyproject.toml  requirements.txt  setup.py
countdown/: __init__.py  __main__.py  countdown.py  main.py  printers.py  pyproject.toml  utils.py
countdown/alarm/: __init__.py  errors.py
countdown/alarm/alarm_classes/: AlarmBase.py  SilentAlarm.py  __init__.py
countdown/countdown/: Countdown.py  Listener.py  __init__.py  main.py  utils.py
countdown/countdown/alarm/alarm_classes/: SilentAlarm.py
countdown/countdown/parser/: Parser.py
countdown/countdown/printer/: __init__.py  errors.py  formatters.py
countdown/countdown/printer/printer_classes/: BasicPrinter.py  CursesPrinter.py  PrinterBase.py  __init__.py
countdown/parser/: Arguments.py  Parser.py  __init__.py  duration.py
countdown/parser/errors/: ParseError.py  __init__.py
countdown/printer/: __init__.py
countdown/printer/errors/: PrinterError.py  __init__.py
countdown/printer/printer_classes/: BasicPrinter.py  CursesPrinter.py  PrinterBase.py  __init__.py
tests/test_parser/: test_Parser.py
